mobile header prototype using percents

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 
 <body>
   <header>
-    <img src="images/Icon-elusive-check.png" alt="logo" id="logo">
-    <h3>Shopping List✓</h3>
-    <img src="images/menu_icon_light.png" alt="menu" class="menu-mobile">
+    <div class="logo">
+      <img src="images/Icon-elusive-check.png" alt="logo">
+    </div>
+    <div class="tagline">
+      <h3>Shopping List✓</h3>
+    </div>
+    <div class="menu-button">
+      <img src="images/menu_icon_light.png" alt="menu">
+    </div>
   </header>
 </body>
 
