add hard coded list entries

--- a/index.html
+++ b/index.html
@@ -22,6 +22,111 @@
       <img src="images/menu_icon_light.png" alt="menu">
     </div>
   </header>
+  <div class="container">
+    <form>
+      <input id="newitem" type="text" name="item" placeholder="Add an item you need to buy" size="22">
+    </form>
+    <div class="label">
+      <h3>Needed</h3>
+    </div>
+    <ul>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item1a">
+          </li>
+          <li class="item">
+            <input type="text" name="item1b" value="apples">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item2a">
+          </li>
+          <li class="item">
+            <input type="text" name="item2b" value="spinach">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item3a">
+          </li>
+          <li class="item">
+            <input type="text" name="item3b" value="bread">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item4a">
+          </li>
+          <li class="item">
+            <input type="text" name="item4b" value="juice">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item5a">
+          </li>
+          <li class="item">
+            <input type="text" name="item5b" value="toothpaste">
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <div class="label">
+      <h3>Purchased</h3>
+    </div>
+        <ul>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item1a">
+          </li>
+          <li class="item">
+            <input type="text" name="item1b" value="oranges">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item2a">
+          </li>
+          <li class="item">
+            <input type="text" name="item2b" value="corn">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item3a">
+          </li>
+          <li class="item">
+            <input type="text" name="item3b" value="paper towel">
+          </li>
+        </ul>
+      </li>
+      <li class="itemrow">
+        <ul>
+          <li class="check">
+            <input type="checkbox" name="item4a">
+          </li>
+          <li class="item">
+            <input type="text" name="item4b" value="potatoes">
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </body>
 
 </html>
