adjust position and style for list elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <div class="container">
     <form>
-      <input id="newitem" type="text" name="item" placeholder="Add an item you need to buy" size="22">
+      <input id="newitem" type="text" name="item" placeholder="Add an item you need">
     </form>
     <div class="label">
       <h3>Needed</h3>
@@ -84,7 +84,7 @@
     <div class="label">
       <h3>Purchased</h3>
     </div>
-        <ul>
+    <ul>
       <li class="itemrow">
         <ul>
           <li class="check">
