remove unnecessary line items

--- a/index.html
+++ b/index.html
@@ -31,54 +31,24 @@
     </div>
     <ul>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item1a">
-          </li>
-          <li class="item">
-            <input type="text" name="item1b" value="apples">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="apples" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item2a">
-          </li>
-          <li class="item">
-            <input type="text" name="item2b" value="spinach">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="spinach" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item3a">
-          </li>
-          <li class="item">
-            <input type="text" name="item3b" value="bread">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="bread" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item4a">
-          </li>
-          <li class="item">
-            <input type="text" name="item4b" value="juice">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="juice" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item5a">
-          </li>
-          <li class="item">
-            <input type="text" name="item5b" value="toothpaste">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="toothpaste" class="item">
       </li>
     </ul>
     <div class="label">
@@ -86,44 +56,20 @@
     </div>
     <ul>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item1a">
-          </li>
-          <li class="item">
-            <input type="text" name="item1b" value="oranges">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="oranges" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item2a">
-          </li>
-          <li class="item">
-            <input type="text" name="item2b" value="corn">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="corn" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item3a">
-          </li>
-          <li class="item">
-            <input type="text" name="item3b" value="paper towel">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="paper towel" class="item">
       </li>
       <li class="itemrow">
-        <ul>
-          <li class="check">
-            <input type="checkbox" name="item4a">
-          </li>
-          <li class="item">
-            <input type="text" name="item4b" value="potatoes">
-          </li>
-        </ul>
+        <input type="checkbox" name="item1a">
+        <input type="text" name="item1b" value="potatoes" class="item">
       </li>
     </ul>
   </div>
