change icons for purchased section

--- a/index.html
+++ b/index.html
@@ -26,52 +26,56 @@
     <form>
       <input id="newitem" type="text" name="item" placeholder="Add an item you need">
     </form>
-    <div class="label">
-      <h3>Needed</h3>
+    <div class="needed">
+      <div class="label">
+        <h3>Needed</h3>
+      </div>
+      <ul>
+        <li class="itemrow">
+          <input type="checkbox" name="item1a">
+          <input type="text" name="item1b" value="apples" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="checkbox" name="item1a">
+          <input type="text" name="item1b" value="spinach" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="checkbox" name="item1a">
+          <input type="text" name="item1b" value="bread" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="checkbox" name="item1a">
+          <input type="text" name="item1b" value="juice" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="checkbox" name="item1a">
+          <input type="text" name="item1b" value="toothpaste" class="item">
+        </li>
+      </ul>
     </div>
-    <ul>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="apples" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="spinach" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="bread" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="juice" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="toothpaste" class="item">
-      </li>
-    </ul>
-    <div class="label">
-      <h3>Purchased</h3>
+    <div class="purchased">
+      <div class="label">
+        <h3>Purchased</h3>
+      </div>
+      <ul>
+        <li class="itemrow">
+          <input type="image" src="images/refresh.png" alt="Buy again">
+          <input type="text" name="item1b" value="oranges" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="image" src="images/refresh.png" alt="Buy again">
+          <input type="text" name="item1b" value="corn" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="image" src="images/refresh.png" alt="Buy again">
+          <input type="text" name="item1b" value="paper towel" class="item">
+        </li>
+        <li class="itemrow">
+          <input type="image" src="images/refresh2.png" alt="Buy again">
+          <input type="text" name="item1b" value="potatoes" class="item">
+        </li>
+      </ul>
     </div>
-    <ul>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="oranges" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="corn" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="paper towel" class="item">
-      </li>
-      <li class="itemrow">
-        <input type="checkbox" name="item1a">
-        <input type="text" name="item1b" value="potatoes" class="item">
-      </li>
-    </ul>
   </div>
 </body>
 
