complete hard coded wireframe

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <input type="text" name="item1b" value="toothpaste" class="item">
         </li>
       </ul>
+      <input type="button" name="additems" value="✓+" class="add">
     </div>
     <div class="purchased">
       <div class="label">
