--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
       </ul>
     </div>
   </div>
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
