use font-awesome icons. closes #8

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Shopping List✓</title>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|EB+Garamond" rel="stylesheet" type="text/css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -32,23 +33,23 @@
       </div>
       <ul>
         <li class="itemrow">
-          <input type="checkbox" name="item1a">
+          <i class="fa fa-circle-o" aria-hidden="true"></i>
           <input type="text" name="item1b" value="apples" class="item">
         </li>
         <li class="itemrow">
-          <input type="checkbox" name="item1a">
+          <i class="fa fa-circle-o" aria-hidden="true"></i>
           <input type="text" name="item1b" value="spinach" class="item">
         </li>
         <li class="itemrow">
-          <input type="checkbox" name="item1a">
+          <i class="fa fa-circle-o" aria-hidden="true"></i>
           <input type="text" name="item1b" value="bread" class="item">
         </li>
         <li class="itemrow">
-          <input type="checkbox" name="item1a">
+          <i class="fa fa-circle-o" aria-hidden="true"></i>
           <input type="text" name="item1b" value="juice" class="item">
         </li>
         <li class="itemrow">
-          <input type="checkbox" name="item1a">
+          <i class="fa fa-circle-o" aria-hidden="true"></i>
           <input type="text" name="item1b" value="toothpaste" class="item">
         </li>
       </ul>
@@ -60,19 +61,19 @@
       </div>
       <ul>
         <li class="itemrow">
-          <input type="image" src="images/refresh.png" alt="Buy again">
+          <i class="fa fa-history" aria-hidden="true"></i>
           <input type="text" name="item1b" value="oranges" class="item">
         </li>
         <li class="itemrow">
-          <input type="image" src="images/refresh.png" alt="Buy again">
+          <i class="fa fa-history" aria-hidden="true"></i>
           <input type="text" name="item1b" value="corn" class="item">
         </li>
         <li class="itemrow">
-          <input type="image" src="images/refresh.png" alt="Buy again">
+          <i class="fa fa-history" aria-hidden="true"></i>
           <input type="text" name="item1b" value="paper towel" class="item">
         </li>
         <li class="itemrow">
-          <input type="image" src="images/refresh2.png" alt="Buy again">
+          <i class="fa fa-history" aria-hidden="true"></i>
           <input type="text" name="item1b" value="potatoes" class="item">
         </li>
       </ul>
