--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Shopping List✓</title>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|EB+Garamond" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
