--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <script src="//code.jquery.com/jquery.min.js"></script>
-  <script src="dist/app.js"></script>
+  <script src="_dist/app.js"></script>
 </body>
 
 </html>
